--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ Keras==2.3.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
-MarkupSafe==1.1.1
 numpy==1.17.2
 pandas==0.24.2
 protobuf==3.9.1
@@ -29,5 +28,12 @@ stats==0.1.2a0
 text-unidecode==1.2
 tqdm==4.32.2
 urllib3==1.24.3
-werkzeug==0.15.3
+Click==7.0
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+joblib==0.13.2
+MarkupSafe==1.1.1
+numpy==1.17.1
+Werkzeug==0.15.5
 
