--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,13 @@
-cachetools==3.1.1
-certifi==2019.6.16
+certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
-cycler==0.10.0
 Flask==1.1.1
-grpcio==1.22.0
-gunicorn==19.9.0
-h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10.1
-joblib==0.13.2
-Keras==2.3.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-pandas==0.24.2
-protobuf==3.9.1
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1.1
-requests==2.22.0
-scipy==1.3.0
-six==1.12.0
-stats==0.1.2a0
-text-unidecode==1.2
-tqdm==4.32.2
-urllib3==1.24.3
-Click==7.0
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-joblib==0.13.2
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-numpy==1.17.1
-Werkzeug==0.15.5
-
+requests==2.22.0
+urllib3==1.25.6
+vaderSentiment==3.2.1
+Werkzeug==0.16.0
+gunicorn==19.9.0
